# numerai-benchmark

./: README.md  numerai_signal_process.py  pyproject.toml  requirement.txt  setup.cfg  supplementary.md
numerai-signals/: best_parameters_lightgbm_0.json  best_parameters_lightgbm_1000.json  best_parameters_lightgbm_2000.json  best_parameters_lightgbm_3000.json  best_parameters_lightgbm_4000.json  best_parameters_lightgbm_5000.json  best_parameters_lightgbm_6000.json  numerai-signals-train.py  search_space_lightgbm_0.json  search_space_lightgbm_1000.json  search_space_lightgbm_2000.json  search_space_lightgbm_3000.json  search_space_lightgbm_4000.json  search_space_lightgbm_5000.json  search_space_lightgbm_6000.json
numerai-signals/Notebooks/: Numerai-Signals-Download-WRDS.ipynb  Numerai-Signals-Metadata.ipynb  Numerai-Signals-Performances.ipynb  Numerai-Signals-Price-Methods.ipynb  Numerai-Signals-Thesis.ipynb
numerai-signals/numerai-signals-performances/: lightgbm_None_1_0_20.csv  lightgbm_None_1_1000_20.csv  lightgbm_None_1_100_20.csv  lightgbm_None_1_1020_20.csv  lightgbm_None_1_1040_20.csv  lightgbm_None_1_1060_20.csv  lightgbm_None_1_1080_20.csv  lightgbm_None_1_1100_20.csv  lightgbm_None_1_1120_20.csv  lightgbm_None_1_1140_20.csv  lightgbm_None_1_1160_20.csv  lightgbm_None_1_1180_20.csv  lightgbm_None_1_1200_20.csv  lightgbm_None_1_120_20.csv  lightgbm_None_1_1220_20.csv  lightgbm_None_1_1240_20.csv  (+159 more)
numerai-v4/: numerai-classic-v4-thesis.py
scripts/: numerai-benchmark.sh  numerai-dev.sh  numerai-signals.sh  numerai.sh
src/: dockerfile  setup.py
(+421 files in other folders)
